# SCEPTIC

./: .gitignore  CITATION.cff  LICENSE  README.md  SUPPLEMENTARY_DATA_MANIFEST.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
data/: all_tf_pairs_scp548.csv  emtab_tf_means.csv  gse65682_scores.csv  hctl_3cohort_crossvalidation.csv  literature_audit_scp548.csv  mas_sepsis_ibd_per_sample.csv  matched_null_sensitivity.csv  scp548_all_tf_scores.csv  scp548_tf_means.csv  table_s3_qc_metrics.csv
docker/: Dockerfile
example_data/: example_cell_types.csv  example_pairs.csv  example_tf_scores.csv
resources/: machine_readable_sceptic_checklist.csv  machine_readable_sceptic_checklist.json  table_s6_statistical_testing_families.csv  table_s7_sceptic_parameters_thresholds.csv
sceptic/: __init__.py  cli.py  core.py  io.py  validator.py
scripts/: build_sceptic_docx.py  gen_fig1_final.py  gen_fig1_sceptic.py  gen_fig2_final.py  gen_fig3_final.py  gen_fig5_final.py  gen_fig5_literature_audit.py  gen_graphical_abstract.py  run_all_analyses.py  run_literature_audit.py
tests/: test_core.py
