[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sceptic"
version = "1.0.0"
description = "SCEPTIC: Single-Cell Expression Program Testing and Integrity Checklist"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Xutao Guo", email = "gxt827@126.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["single-cell", "transcription-factor", "co-expression", "validation", "reproducibility", "scRNA-seq"]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
report = ["matplotlib>=3.5"]

[project.urls]
Homepage = "https://github.com/xutaoguo55/SCEPTIC"
Repository = "https://github.com/xutaoguo55/SCEPTIC"

[project.scripts]
sceptic = "sceptic.cli:main"

[tool.setuptools.packages.find]
include = ["sceptic*"]
